[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hyperdt"
version = "0.0.4"
description = "Fast Hyperboloid Decision Tree Algorithms"
authors = [
    {name = "Philippe Chlenski", email = "pac@cs.columbia.edu"}
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy==1.26.1",
    "geomstats==2.7.0",
    "matplotlib==3.8.0",
    "scikit-learn==1.4.1",
    "scipy==1.11.3",
    "tqdm==4.66.1",
    "joblib==1.3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.3.0",
    "isort>=5.10.1",
    "mypy>=0.950",
]

[project.urls]
"Homepage" = "http://www.github.com/pchlenski/hyperdt"
"Bug Tracker" = "http://www.github.com/pchlenski/hyperdt/issues"

[tool.setuptools]
packages = ["hyperdt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=hyperdt"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false