[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hyperdt"
version = "0.0.4"
description = "Fast Hyperboloid Decision Tree Algorithms"
authors = [
    {name = "Philippe Chlenski", email = "pac@cs.columbia.edu"}
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.20.0",
    "geomstats>=2.5.0",
    "matplotlib>=3.5.0",
    "scikit-learn>=1.0.0",
    "scipy>=1.7.0",
    "tqdm>=4.60.0",
    "joblib>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.3.0",
    "isort>=5.10.1",
    "mypy>=0.950",
    "typing_extensions>=4.0.0",
    "types-setuptools",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=0.950",
    "typing_extensions>=4.0.0",
    "types-setuptools",
]
xgboost = [
    "xgboost>=1.5.0",
]
legacy = [
    # Dependencies specifically for the legacy tree.py implementation
    "geomstats>=2.5.0",
]
all = [
    "xgboost>=1.5.0",
    "geomstats>=2.5.0",
]

[project.urls]
"Homepage" = "http://www.github.com/pchlenski/hyperdt"
"Bug Tracker" = "http://www.github.com/pchlenski/hyperdt/issues"

[tool.setuptools]
packages = ["hyperdt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=hyperdt"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false