[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hyperdt"
version = "0.0.4"
description = "Fast Hyperboloid Decision Tree Algorithms"
authors = [
    {name = "Philippe Chlenski", email = "pac@cs.columbia.edu"}
]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.20.0",
    "geomstats>=2.5.0",
    "matplotlib>=3.5.0",
    "scikit-learn>=1.4.0", # Updated minimum to ensure random forest classes has estimators_samples_ attribute
    "scipy>=1.7.0",
    "tqdm>=4.60.0",
    "joblib>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.3.0",
    "isort>=5.10.1",
    "mypy>=0.950",
    "typing_extensions>=4.0.0",
    "types-setuptools",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=0.950",
    "typing_extensions>=4.0.0",
    "types-setuptools",
]
xgboost = [
    "xgboost>=1.5.0",
]
legacy = []
oblique = [
    "scikit-obliquetree>=0.1.0",
    "numba>=0.56.0",
]
all = [
    "xgboost>=1.5.0",
    "scikit-obliquetree>=0.1.0",
    "numba>=0.56.0",
]

[project.urls]
"Homepage" = "http://www.github.com/pchlenski/hyperdt"
"Bug Tracker" = "http://www.github.com/pchlenski/hyperdt/issues"

[tool.setuptools]
packages = ["hyperdt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=hyperdt"

[tool.black]
line-length = 120
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
follow_imports = "skip"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = "numpy.*"
ignore_errors = true